<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cassettes">

    <fragment
        android:id="@+id/nav_cassettes"
        android:name="com.msvteam.tapestry.ui.home.HomeFragment"
        android:label="@string/menu_cassettes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_models"
        android:name="com.msvteam.tapestry.ui.modelList.ModelListFragment"
        android:label="@string/menu_models"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_boxes"
        android:name="com.msvteam.tapestry.ui.boxList.BoxListFragment"
        android:label="@string/menu_boxes"
        tools:layout="@layout/fragment_box_list" />
</navigation>