<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView_model"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/fieldName_cassette_model"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_length"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:text="@string/prefix_tapeLength"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/textView_tapeType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView_tapeType"
            app:layout_constraintTop_toTopOf="@+id/textView_tapeType"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/textView_tapeType"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/prefix_tapeTapeType"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_model" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>